@@ -19,6 +19,7 @@
   - Improved Mojolicious::Routes to disallow namespace without controller for routing.
   - Improved Mojolicious::Routes to die if auto rendering failed.
   - Improved render method in Mojolicious::Controller to die if no response could be rendered.
+  - Improved reply->static helper to die if the requested file does not exist.
   - Improved contextual logging feature in Mojo::Log not to concatenate log messages and context.
   - Improved all_text method in Mojo::DOM to exclude "<script>" and "<style>" from text extraction in HTML documents.
   - Improved error messages in config plugins to be more consistent.
